Bump version to 2.0.0-beta.2.4 and update dependencies (#244)
* Bump version to 2.0.0-beta.2.4 and update dependencies

- Bumped project version from 2.0.0-beta.2.3 to 2.0.0-beta.2.4
- Updated dependencies:
  - Updated netty-bom from 4.2.10.Final to 4.2.12.Final
  - Updated senzing-commons from 4.0.0-beta.2.1 to 4.0.0-beta.3.0
  - Updated Amazon sqs from 2.42.18 to 2.42.28
  - Updated embedded-postgres-binaries-darwin-arm64v8 from 14.20.0
    to 14.22.0
- Updated CHANGELOG.md with 2.0.0-beta.2.4 entry
- Updated CLAUDE.md dependency references to match pom.xml

* Fix flaky SzRelatedEntityTest on Linux CI

- Added @Execution(ExecutionMode.SAME_THREAD) to
  AbstractListenerServiceTest which uses SystemErr capture in 10 test
  methods but lacked the annotation, allowing it to run concurrently
  with other test classes and swap System.err out from under their
  SystemErr stubs
- This was the root cause of the intermittent
  SzRelatedEntityTest.testParseWithEmptyMatchKeyLogsError failure on
  Linux CI where parallel class execution timing differs from macOS

* Changed pom.xml to cause unit tests to execute sequentially since there is no time difference and then we can reliably test logging output

* Checkstyle/formatting updates to eliminate checkstyle warnings

* Cleanup on code style and formatting