@@ -25,7 +25,8 @@ import static com.senzing.text.TextUtilities.urlEncodeUtf8;
  * legal for parsing and attempts to reproduce the equivalent URI when formatted
  * via {@link #toString()} (save preserving the spaces without URL encoding).
  */
-public class SQLiteUri extends ConnectionUri {
+public class SQLiteUri extends ConnectionUri
+{
     /**
      * The query option key for the SQLite mode.
      */
@@ -38,35 +39,43 @@ public class SQLiteUri extends ConnectionUri {
     public static final String MEMORY_MODE = "memory";
 
     /**
-     * The scheme prefix for the URI's including the <code>":"</code>. The value of
-     * this is <code>{@value}</code>.
+     * The scheme prefix for the URI's including the
+     * <code>":"</code>. The value of this is
+     * <code>{@value}</code>.
      */
     public static final String SCHEME_PREFIX = "sqlite3:";
 
     /**
-     * The special token used as a file path to indicate that the database is stored
-     * in-memory rather than on the file system. The value of this is
+     * The special token used as a file path to indicate that the database is
+     * stored in-memory rather than on the file system. The value of this is
      * <code>{@value}</code>.
      */
     public static final String MEMORY_TOKEN = ":memory:";
 
     /**
      * Supported format for a SQLite URI using a file path. An optional user and
-     * password may be specified, but they are not used. The value of this constant
-     * is <code>{value}</code>.
-     */
-    public static final String SUPPORTED_FORMAT_1 = "sqlite3://[unusedUser:unusedPassword@]/database_file_path";
-
-    /**
-     * Supported format for an in-memory SQLite URI using an fake file path as an
-     * identifier. An optional user and password may be specified, but they are not
-     * used. The value of this constant is <code>{value}</code>.
-     */
-    public static final String SUPPORTED_FORMAT_2 = "sqlite3://[unusedUser:unusedPassword@]/identifier?mode=memory&cache=shared";
-
-    /**
-     * Supported format for an in-memory SQLite URI. The value of this constant is
+     * password may be specified, but they are not used. The value of this
+     * constant is
      * <code>{value}</code>.
+     */
+    // CSOFF: LineLength
+    public static final String SUPPORTED_FORMAT_1
+        = "sqlite3://[unusedUser:unusedPassword@]/database_file_path";
+    // CSON: LineLength
+
+    /**
+     * Supported format for an in-memory SQLite URI using an fake file path as
+     * an identifier. An optional user and password may be specified, but they
+     * are not used. The value of this constant is <code>{value}</code>.
+     */
+    // CSOFF: LineLength
+    public static final String SUPPORTED_FORMAT_2
+        = "sqlite3://[unusedUser:unusedPassword@]/identifier?mode=memory&cache=shared";
+    // CSON: LineLength
+
+    /**
+     * Supported format for an in-memory SQLite URI. The value of this constant
+     * is <code>{value}</code>.
      */
     public static final String SUPPORTED_FORMAT_3 = "sqlite3::memory:";
 
@@ -78,8 +87,10 @@ public class SQLiteUri extends ConnectionUri {
      * <li><code>{@value #SUPPORTED_FORMAT_3}</code> (in-memory no path)</li>
      * </ul>
      */
-    public static final Set<String> SUPPORTED_FORMATS = Collections
-            .unmodifiableSet(Set.of(SUPPORTED_FORMAT_1, SUPPORTED_FORMAT_2, SUPPORTED_FORMAT_3));
+    public static final Set<String> SUPPORTED_FORMATS
+        = Collections.unmodifiableSet(Set.of(
+            SUPPORTED_FORMAT_1, SUPPORTED_FORMAT_2,
+            SUPPORTED_FORMAT_3));
     /**
      * The {@link File} for the SQLite database.
      */
@@ -108,9 +119,12 @@ public class SQLiteUri extends ConnectionUri {
      * @param queryOptions The query options, or <code>null</code> if none.
      * 
      * @return The modified query options {@link Map} of {@link String} keys to
-     *         {@link String} values with the {@link #MODE_KEY} possibly removed.
+     *             {@link String} values with the {@link #MODE_KEY} possibly
+     *             removed.
      */
-    private static Map<String, String> stripMemoryOption(Map<String, String> queryOptions) {
+    private static Map<String, String> stripMemoryOption(
+            Map<String, String> queryOptions)
+    {
         if (queryOptions == null) {
             return null;
         }
@@ -141,28 +155,33 @@ public class SQLiteUri extends ConnectionUri {
     /**
      * Default constructor for a SQLite connection to an in-memory database.
      */
-    public SQLiteUri() {
+    public SQLiteUri()
+    {
         this((Map<String, String>) null);
     }
 
     /**
-     * Constructs an instance for a SQLite connection to an in-memory database with
-     * the specified query options.
-     * 
+     * Constructs an instance for a SQLite connection to an in-memory database
+     * with the specified query options.
+     *
      * @param queryOptions The optional {@link Map} of {@link String} query
-     *                     parameter keys to {@link String} query parameter values,
-     *                     or <code>null</code> if no parameters.
+     *                     parameter keys to {@link String} query parameter
+     *                     values, or <code>null</code> if no parameters.
      * 
      * @throws IllegalArgumentException If the query options specify a
      *                                  {@linkplain #MODE_KEY mode} other than
      *                                  {@linkplain #MEMORY_MODE memory mode}.
      */
-    public SQLiteUri(Map<String, String> queryOptions) {
+    public SQLiteUri(Map<String, String> queryOptions)
+    {
         super(SCHEME_PREFIX, stripMemoryOption(queryOptions));
         if (queryOptions != null && queryOptions.containsKey(MODE_KEY)
                 && !MEMORY_MODE.equalsIgnoreCase(queryOptions.get(MODE_KEY))) {
-            throw new IllegalArgumentException("Can only specify " + MODE_KEY + "=" + MEMORY_MODE
-                    + " query option if constructing without a path: " + queryOptions);
+            throw new IllegalArgumentException(
+                    "Can only specify " + MODE_KEY + "="
+                    + MEMORY_MODE + " query option if "
+                    + "constructing without a path: "
+                    + queryOptions);
         }
 
         // nullify the other fields
@@ -181,7 +200,8 @@ public class SQLiteUri extends ConnectionUri {
      * @throws NullPointerException If the specified {@link File} is
      *                              <code>null</code>.
      */
-    public SQLiteUri(File file) {
+    public SQLiteUri(File file)
+    {
         this(file, null);
     }
 
@@ -192,27 +212,30 @@ public class SQLiteUri extends ConnectionUri {
      * @param file         The {@link File} for the path to the SQLite database.
      * 
      * @param queryOptions The optional {@link Map} of {@link String} query
-     *                     parameter keys to {@link String} query parameter values,
-     *                     or <code>null</code> if no parameters.
-     * 
+     *                     parameter keys to {@link String} query parameter
+     *                     values, or <code>null</code> if no parameters.
+     *
      * @throws NullPointerException If the specified {@link File} is
      *                              <code>null</code>.
      */
-    public SQLiteUri(File file, Map<String, String> queryOptions) {
+    public SQLiteUri(File file,
+                     Map<String, String> queryOptions)
+    {
         this(null, null, file, queryOptions);
     }
 
     /**
      * Protected constructor to preserve unused fields.
      * 
-     * @param unusedUser     A user to specify to include the URI even though the
-     *                       user name is not used.
-     * 
-     * @param unusedPassword A password to specify to include the URI even though
-     *                       the password is not used.
-     * 
-     * @param file           The {@link File} for the path to the SQLite database.
-     * 
+     * @param unusedUser     A user to specify to include the URI even though
+     *                       the user name is not used.
+     *
+     * @param unusedPassword A password to specify to include the URI even
+     *                       though the password is not used.
+     *
+     * @param file           The {@link File} for the path to the SQLite
+     *                       database.
+     *
      * @param queryOptions   The optional {@link Map} of {@link String} query
      *                       parameter keys to {@link String} query parameter
      *                       values, or <code>null</code> if no parameters.
@@ -220,94 +243,119 @@ public class SQLiteUri extends ConnectionUri {
      * @throws NullPointerException If the specified {@link File} is
      *                              <code>null</code>.
      */
-    protected SQLiteUri(String unusedUser, String unusedPassword, File file, Map<String, String> queryOptions) {
+    protected SQLiteUri(String              unusedUser,
+                        String              unusedPassword,
+                        File                file,
+                        Map<String, String> queryOptions)
+    {
         super(SCHEME_PREFIX, queryOptions);
 
         requireNonNull(file, "The file cannot be null");
-        if ((unusedUser == null && unusedPassword != null) || (unusedUser != null && unusedPassword == null)) {
+        if ((unusedUser == null && unusedPassword != null)
+                || (unusedUser != null && unusedPassword == null))
+        {
             // NOTE: logging unusedPassword here is fine — it is not a real
             // credential, it is a placeholder value (typically "na") that
             // Senzing ignores for SQLite connections.
-            throw new IllegalArgumentException("Inconsistent user credentials.  Either both or neither "
-                    + "should be null.  unusedUser=[ " + unusedUser + " ], unusedPassword=[ " + unusedPassword + " ]");
+            throw new IllegalArgumentException(
+                    "Inconsistent user credentials.  Either "
+                    + "both or neither should be null.  "
+                    + "unusedUser=[ " + unusedUser
+                    + " ], unusedPassword=[ "
+                    + unusedPassword + " ]");
         }
 
         // check for memory mode
-        String mode = (queryOptions != null) ? queryOptions.get(MODE_KEY) : null;
+        String mode = (queryOptions != null)
+                ? queryOptions.get(MODE_KEY) : null;
 
         // set the fields
         this.unusedUser = unusedUser;
         this.unusedPassword = unusedPassword;
-        this.file = MEMORY_MODE.equals(mode) ? null : file;
-        this.inMemoryIdentifier = MEMORY_MODE.equals(mode) ? file.toString() : null;
+        this.file = MEMORY_MODE.equals(mode)
+                ? null : file;
+        this.inMemoryIdentifier = MEMORY_MODE.equals(mode)
+                ? file.toString() : null;
     }
 
     /**
-     * Gets the {@link File} for this instance. This will return <code>null</code>
+     * Gets the {@link File} for this instance. This will return
+     * <code>null</code>
      * if this represents a SQLite connection to an in-memory database.
      * 
      * @return The {@link File} for this instance, or <code>null</code> if this
-     *         represents a SQLite connection to an in-memory database.
+     *             represents a SQLite connection to an in-memory database.
      */
-    public File getFile() {
+    public File getFile()
+    {
         return this.file;
     }
 
     /**
      * Checks if this instance is using an in-memory database.
      * 
-     * @return <code>true</code> if this instance is using an in-memory database,
-     *         otherwise <code>false</code>.
+     * @return <code>true</code> if this instance is using an in-memory
+     *                           database, otherwise <code>false</code>.
      */
-    public boolean isMemory() {
+    public boolean isMemory()
+    {
         return (this.file == null);
     }
 
     /**
-     * Returns the user name that may have been specified even though the user name
-     * is not used (e.g.: <code>"na"</code>).
-     * 
-     * @return The user name that may have been specified even though the user name
-     *         is not used.
+     * Returns the user name that may have been specified even though the user
+     * name is not used (e.g.:
+     * <code>"na"</code>).
+     *
+     * @return The user name that may have been specified even though the user
+     *             name is not used.
      */
-    protected String getUnusedUser() {
+    protected String getUnusedUser()
+    {
         return this.unusedUser;
     }
 
     /**
-     * Returns the password that may have been specified even though the password is
-     * not used (e.g.: <code>"na"</code>).
-     * 
-     * @return The user name that may have been specified even though the user name
-     *         is not used.
+     * Returns the password that may have been specified even though the
+     * password is not used (e.g.:
+     * <code>"na"</code>).
+     *
+     * @return The user name that may have been specified even though the user
+     *             name is not used.
      */
-    protected String getUnusedPassword() {
+    protected String getUnusedPassword()
+    {
         return this.unusedPassword;
     }
 
     /**
      * Returns the identifier for the in-memory database that may have been
-     * specified as a dummy file path when the database is designated as in-memory.
-     * This allows for multiple distinct in-memory databases to exist.
-     * 
+     * specified as a dummy file path when the database is designated as
+     * in-memory. This allows for multiple distinct in-memory databases to
+     * exist.
+     *
      * @return The dummy file path that may have been specified as an in-memory
-     *         database identifier.
+     *             database identifier.
      */
-    public String getInMemoryIdentifier() {
+    public String getInMemoryIdentifier()
+    {
         return this.inMemoryIdentifier;
     }
 
     /**
-     * Implemented to format the URI as a {@link String} with proper URI encoding.
+     * Implemented to format the URI as a {@link String} with proper URI
+     * encoding.
      * 
      * @return The formatted URI for this instance.
      */
-    public String toString() {
+    public String toString()
+    {
         String unusedUser = this.getUnusedUser();
         String unusedPassword = this.getUnusedPassword();
         String memoryDbId = this.getInMemoryIdentifier();
 
-        boolean unusedFields = (unusedUser != null || unusedPassword != null || memoryDbId != null);
+        boolean unusedFields = (unusedUser != null
+                || unusedPassword != null || memoryDbId != null);
 
         if (this.isMemory() && !unusedFields) {
             return SCHEME_PREFIX + MEMORY_TOKEN + this.getQueryString();
@@ -341,8 +389,9 @@ public class SQLiteUri extends ConnectionUri {
 
             String path = this.file.getPath();
             if (isNonstandardWindowsPath(path)) {
-                // handle windows drive letter and UNC paths since Senzing supports
-                // backslashes in the paths even though URI's do not support this
+                // handle windows drive letter and UNC paths since
+                // Senzing supports backslashes in the paths even
+                // though URI's do not support this
                 String drivePrefix = path.substring(0, 2);
                 sb.append(drivePrefix);
                 if (path.length() > 2) {
@@ -371,14 +420,19 @@ public class SQLiteUri extends ConnectionUri {
     }
 
     /**
-     * Implemented to return a hash code consistent with the {@link #equals(Object)}
-     * implementation.
+     * Implemented to return a hash code consistent with the
+     * {@link #equals(Object)} implementation.
      * 
      * @return The hash code for this instance.
      */
-    public int hashCode() {
-        return Objects.hash(this.getFile(), this.isMemory(), this.getUnusedUser(), this.getUnusedPassword(),
-                this.getInMemoryIdentifier(), this.getQueryOptions());
+    public int hashCode()
+    {
+        return Objects.hash(this.getFile(),
+                this.isMemory(),
+                this.getUnusedUser(),
+                this.getUnusedPassword(),
+                this.getInMemoryIdentifier(),
+                this.getQueryOptions());
     }
 
     /**
@@ -389,9 +443,10 @@ public class SQLiteUri extends ConnectionUri {
      * @param obj The object to compare with.
      * 
      * @return <code>true</code> if and only if the objects are equal, otherwise
-     *         <code>false</code>.
+     *                           <code>false</code>.
      */
-    public boolean equals(Object obj) {
+    public boolean equals(Object obj)
+    {
         if (obj == null) {
             return false;
         }
@@ -402,24 +457,30 @@ public class SQLiteUri extends ConnectionUri {
             return false;
         }
         SQLiteUri uri = (SQLiteUri) obj;
-        return Objects.equals(this.isMemory(), uri.isMemory()) && Objects.equals(this.getFile(), uri.getFile())
-                && Objects.equals(this.getUnusedUser(), uri.getUnusedUser())
-                && Objects.equals(this.getUnusedPassword(), uri.getUnusedPassword())
-                && Objects.equals(this.getInMemoryIdentifier(), uri.getInMemoryIdentifier())
-                && Objects.equals(this.getQueryOptions(), uri.getQueryOptions());
+        return Objects.equals(this.isMemory(), uri.isMemory())
+                && Objects.equals(this.getFile(), uri.getFile())
+                && Objects.equals(this.getUnusedUser(),
+                        uri.getUnusedUser())
+                && Objects.equals(this.getUnusedPassword(),
+                        uri.getUnusedPassword())
+                && Objects.equals(this.getInMemoryIdentifier(),
+                        uri.getInMemoryIdentifier())
+                && Objects.equals(this.getQueryOptions(),
+                        uri.getQueryOptions());
     }
 
     /**
-     * Provides a static factory method for parsing a SQLite database connection URI
-     * formatted as a {@link String}.
-     * 
+     * Provides a static factory method for parsing a SQLite database connection
+     * URI formatted as a {@link String}.
+     *
      * <p>
-     * <b>NOTE:</b> The Senzing environment initialization settings support Windows
-     * file paths in the SQLite URI that contain back-slashes as file separators as
-     * well as spaces that are not URL-encoded. While such URI's are not technically
-     * legal, they may be encountered when working with Senzing environment
-     * initialization settings on Windows, and therefore, this function treats them
-     * as legal for parsing.
+     * <b>NOTE:</b> The Senzing environment initialization
+     * settings support Windows file paths in the SQLite URI that contain
+     * back-slashes as file separators as well as spaces that are not
+     * URL-encoded. While such URI's are not technically legal, they may be
+     * encountered when working with Senzing environment initialization settings
+     * on Windows, and therefore, this function treats them as legal for
+     * parsing.
      * 
      * @param uri The URI to parse.
      * 
@@ -431,12 +492,16 @@ public class SQLiteUri extends ConnectionUri {
      * @throws IllegalArgumentException If the specified URI is not properly
      *                                  formatted.
      */
-    public static SQLiteUri parse(String uri) {
+    public static SQLiteUri parse(String uri)
+    {
         requireNonNull(uri, "The URI cannot be null");
 
         // check the prefix
-        if (!(uri.toLowerCase().startsWith(SCHEME_PREFIX) && uri.length() > SCHEME_PREFIX.length())) {
-            throw new IllegalArgumentException("URI must begin with \"" + SCHEME_PREFIX + "\": " + uri);
+        if (!(uri.toLowerCase().startsWith(SCHEME_PREFIX)
+                && uri.length() > SCHEME_PREFIX.length())) {
+            throw new IllegalArgumentException(
+                    "URI must begin with \""
+                    + SCHEME_PREFIX + "\": " + uri);
         }
 
         // get the suffix
@@ -457,7 +522,8 @@ public class SQLiteUri extends ConnectionUri {
         } else if (suffix.startsWith("//") && suffix.length() > 2) {
             suffix = suffix.substring(2);
         } else {
-            throw new IllegalArgumentException("Unrecognized URI format: " + uri);
+            throw new IllegalArgumentException(
+                    "Unrecognized URI format: " + uri);
         }
 
         // find the unused user if any
@@ -467,7 +533,8 @@ public class SQLiteUri extends ConnectionUri {
         String unusedPassword = null;
         if (index >= 0) {
             String authority = suffix.substring(0, index);
-            suffix = (index < suffix.length() - 1) ? suffix.substring(index + 1) : "";
+            suffix = (index < suffix.length() - 1)
+                    ? suffix.substring(index + 1) : "";
             index = authority.indexOf(':');
             if (index < 0) {
                 // treat the whole authority as a user with no password
@@ -477,7 +544,8 @@ public class SQLiteUri extends ConnectionUri {
                 // split on the ":" and get the user and password
                 unusedUser = urlDecodeUtf8(authority.substring(0, index));
 
-                unusedPassword = (index < authority.length() - 1) ? authority.substring(index + 1) : "";
+                unusedPassword = (index < authority.length() - 1)
+                        ? authority.substring(index + 1) : "";
                 unusedPassword = urlDecodeUtf8(unusedPassword);
             }
         }
@@ -497,7 +565,8 @@ public class SQLiteUri extends ConnectionUri {
         boolean memory = (map != null) && MEMORY_MODE.equals(map.get(MODE_KEY));
 
         if (!memory && path.length() == 0) {
-            throw new IllegalArgumentException("Unable to parse path from URI: " + uri);
+            throw new IllegalArgumentException(
+                    "Unable to parse path from URI: " + uri);
         }
 
         // build a file object
@@ -530,15 +599,16 @@ public class SQLiteUri extends ConnectionUri {
     }
 
     /**
-     * Checks if the specified path appears to be a Windows path that is not legally
-     * formatted for a standard URI.
+     * Checks if the specified path appears to be a Windows path that is not
+     * legally formatted for a standard URI.
      * 
      * @param path The path to check.
      * 
      * @return <code>true</code> if a non-standard Windows path is encountered,
-     *         otherwise <code>false</code>.
+     *                           otherwise <code>false</code>.
      */
-    private static boolean isNonstandardWindowsPath(String path) {
+    private static boolean isNonstandardWindowsPath(String path)
+    {
         // ensure the path is trimmed of all whitespace
         path = path.trim();
 
@@ -571,9 +641,11 @@ public class SQLiteUri extends ConnectionUri {
      * @param path The path to check.
      * 
      * @return <code>true</code> if the specified {@link String} starts with a
-     *         potential Windows drive letter, otherwise <code>false</code>
+     *                           potential Windows drive letter, otherwise
+     *                           <code>false</code>
      */
-    private static boolean startsWithLegalWindowsDriveLetter(String path) {
+    private static boolean startsWithLegalWindowsDriveLetter(String path)
+    {
         String upperPrefix = path.substring(0, 1).toUpperCase();
         char driveLetter = upperPrefix.charAt(0);
         return (driveLetter >= 'A' && driveLetter <= 'Z');
